--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -112,9 +112,16 @@
     }
   }
   .maintable {
+    h1{
+      color: rgb(218, 218, 218);
+      margin: 30px 0;
+      text-align: center;
+    }
     marquee{
       color: white;
       font-size: 14px;
+      font-style: italic;
+      margin-bottom: 10px;
       // max-height: 200px;
       // width: 100%;
     }
