--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -44,6 +44,11 @@
   }
 }
 .maintable {
+  h1{
+    color: rgb(218, 218, 218);
+    margin: 30px 0;
+    text-align: center;
+  }
   marquee{
     color: white;
     // max-height: 200px;
