--- a/src/components/Intro.scss
+++ b/src/components/Intro.scss
@@ -99,6 +99,7 @@
 
 @media screen and (max-width:768px){
     .mainIntro{
+        min-height: unset;
         img{
             height: 60vh;
             width: 100%;
